resolve orgid and said